force-app/main/default/objects/HOVER_Job__c/HOVER_Job__c.object-meta.xml
<CustomObject>
    
    <label>HOVER Job</label>
    <nameField>
        <label>HOVER Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HOVER Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>