force-app/main/default/objects/HOVER_Job__c/fields/Area_Facades_Other__c.field-meta.xml
<CustomField>
    <fullName>Area_Facades_Other__c</fullName>
    <label>Area Facades Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>