force-app/main/default/objects/HOVER_Job__c/fields/Area_Total_Siding__c.field-meta.xml
<CustomField>
    <fullName>Area_Total_Siding__c</fullName>
    <label>Area Total Siding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>