force-app/main/default/objects/HOVER_Job__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person assigned the HOVER Job</description>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HOVER_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>