force-app/main/default/objects/HOVER_Job__c/fields/Capture_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Capture_Request_ID__c</fullName>
    <label>Capture Request ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>