force-app/main/default/objects/HOVER_Job__c/fields/Capturing_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Capturing_User_Email__c</fullName>
    <label>Capturing User Email</label>
    <type>Email</type>
</CustomField>