force-app/main/default/objects/HOVER_Job__c/fields/Capturing_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Capturing_User_Name__c</fullName>
    <label>Capturing User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>