force-app/main/default/objects/HOVER_Job__c/fields/Capturing_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>Capturing_User_Phone__c</fullName>
    <label>Capturing User Phone</label>
    <type>Phone</type>
</CustomField>