force-app/main/default/objects/HOVER_Job__c/fields/Connect_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Connect_Identifier__c</fullName>
    <label>Connect Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>