force-app/main/default/objects/HOVER_Job__c/fields/Connect_Link__c.field-meta.xml
<CustomField>
    <fullName>Connect_Link__c</fullName>
    <label>Connect Link</label>
    <type>Url</type>
</CustomField>