force-app/main/default/objects/HOVER_Job__c/fields/Connect_Status__c.field-meta.xml
<CustomField>
    <fullName>Connect_Status__c</fullName>
    <label>Connect Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>