force-app/main/default/objects/HOVER_Job__c/fields/customer_phone__c.field-meta.xml
<CustomField>
    <fullName>customer_phone__c</fullName>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>