force-app/main/default/objects/HOVER_Job__c/fields/deliverable_id__c.field-meta.xml
<CustomField>
    <fullName>deliverable_id__c</fullName>
    <label>Deliverable</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Roof Only</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Total Living Area Plus</fullName>
            </value>
            <value>
                <fullName>Total Living Area</fullName>
            </value>
            <value>
                <fullName>Capture Only, Photos Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>