force-app/main/default/objects/HOVER_Job__c/fields/Flashing_Total__c.field-meta.xml
<CustomField>
    <fullName>Flashing_Total__c</fullName>
    <label>Flashing Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>