force-app/main/default/objects/HOVER_Job__c/fields/Gutters_Eaves_Total__c.field-meta.xml
<CustomField>
    <fullName>Gutters_Eaves_Total__c</fullName>
    <label>Gutters / Eaves Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>