force-app/main/default/objects/HOVER_Job__c/fields/HOVER_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>HOVER_Job_ID__c</fullName>
    <label>HOVER Job ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>