force-app/main/default/objects/HOVER_Job__c/fields/Initial_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Initial_Org_ID__c</fullName>
    <label>Initial Org ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>