force-app/main/default/objects/HOVER_Job__c/fields/Initial_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Initial_User_ID__c</fullName>
    <label>Initial User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>