force-app/main/default/objects/HOVER_Job__c/fields/location_city__c.field-meta.xml
<CustomField>
    <fullName>location_city__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>