force-app/main/default/objects/HOVER_Job__c/fields/location_country__c.field-meta.xml
<CustomField>
    <fullName>location_country__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>