force-app/main/default/objects/HOVER_Job__c/fields/Location_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Location_Line_2__c</fullName>
    <label>Location Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>