force-app/main/default/objects/HOVER_Job__c/fields/location_postal_code__c.field-meta.xml
<CustomField>
    <fullName>location_postal_code__c</fullName>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>