force-app/main/default/objects/HOVER_Job__c/fields/location_region__c.field-meta.xml
<CustomField>
    <fullName>location_region__c</fullName>
    <label>State (Region)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>