force-app/main/default/objects/HOVER_Job__c/fields/Ridges_Hips_Length__c.field-meta.xml
<CustomField>
    <fullName>Ridges_Hips_Length__c</fullName>
    <label>Ridges / Hips Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>