force-app/main/default/objects/HOVER_Job__c/fields/Ridges_Hips_Total__c.field-meta.xml
<CustomField>
    <fullName>Ridges_Hips_Total__c</fullName>
    <label>Ridges / Hips Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>