force-app/main/default/objects/HOVER_Job__c/fields/Roof_Facets_Total__c.field-meta.xml
<CustomField>
    <fullName>Roof_Facets_Total__c</fullName>
    <label>Roof Facets Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>