force-app/main/default/objects/HOVER_Job__c/fields/Send_Connect_Request__c.field-meta.xml
<CustomField>
    <fullName>Send_Connect_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, send a &quot;hover connect&quot; (capture request) rather than just creating a shell job.</description>
    <label>Send Connect Request</label>
    <type>Checkbox</type>
</CustomField>