force-app/main/default/objects/HOVER_Job__c/fields/Step_Flashing_Area__c.field-meta.xml
<CustomField>
    <fullName>Step_Flashing_Area__c</fullName>
    <label>Step Flashing Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>