force-app/main/default/objects/HOVER_Job__c/fields/Step_Flashing_Total__c.field-meta.xml
<CustomField>
    <fullName>Step_Flashing_Total__c</fullName>
    <label>Step Flashing Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>