force-app/main/default/objects/HOVER_Job__c/fields/Suborg_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Suborg_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suborg Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HOVER_Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>