force-app/main/default/objects/HOVER_Job__c/fields/Suborg_Assignee_ID__c.field-meta.xml
<CustomField>
    <fullName>Suborg_Assignee_ID__c</fullName>
    <label>Suborg Assignee ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>