force-app/main/default/objects/HOVER_Job__c/fields/Valleys_Area__c.field-meta.xml
<CustomField>
    <fullName>Valleys_Area__c</fullName>
    <label>Valleys Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>