force-app/main/default/objects/HOVER_Job__c/fields/Valleys_Length__c.field-meta.xml
<CustomField>
    <fullName>Valleys_Length__c</fullName>
    <label>Valleys Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>