force-app/main/default/objects/HOVER_Job__c/fields/Waste_Factor_Area_Plus_20_Percent__c.field-meta.xml
<CustomField>
    <fullName>Waste_Factor_Area_Plus_20_Percent__c</fullName>
    <label>Waste Factor Area Plus 20 Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>