force-app/main/default/objects/HOVER_Job__c/fields/Waste_Factor_Area_Zero__c.field-meta.xml
<CustomField>
    <fullName>Waste_Factor_Area_Zero__c</fullName>
    <label>Waste Factor Area Zero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>